--- a/Gemma/Web.config
+++ b/Gemma/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   如需如何設定 ASP.NET 應用程式的詳細資訊，請前往
    https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=supergemma.database.windows.net;initial catalog=supergemma;user id=supergemma;password=Super2019;MultipleActiveResultSets=True;App=EntityFramework"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="data source=supergemma.database.windows.net;initial catalog=supergemma;user id=supergemma;password=Super2019;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <!--<add name="GemmaDBContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=GemmaDBContext-20191119181301; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|GemmaDBContext-20191119181301.mdf"
       providerName="System.Data.SqlClient" />-->
+    <add name="GemmaDBContext" connectionString="data source=supergemma.database.windows.net;initial catalog=supergemma;user id=supergemma;password=Super2019;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
