--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -184,6 +184,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\StocksController.cs" />
     <Compile Include="Models\AspNetRole.cs" />
     <Compile Include="Models\AspNetUser.cs" />
     <Compile Include="Models\AspNetUserClaim.cs" />
@@ -207,14 +208,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\ShoppingCart.cs" />
     <Compile Include="Models\Size.cs" />
+    <Compile Include="Repository\MemberRepository.cs" />
+    <Compile Include="Repository\StockRepository.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Models\Stock.cs" />
     <Compile Include="Models\sysdiagram.cs" />
     <Compile Include="ViewModel\MemberViewModel.cs" />
+    <Compile Include="ViewModel\StockViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\css\sb-admin-2.css" />
-    <Content Include="Assets\css\sb-admin-2.min.css" />
+    <Content Include="Assets\css\main.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -305,15 +308,22 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Home\BackStageIndex.cshtml" />
-    <Content Include="Views\Shared\_BackStagePartial.cshtml" />
+    <Content Include="Views\Shared\_BackStagePartialTop.cshtml" />
+    <Content Include="Views\AspNetUsers\Index.cshtml" />
     <Content Include="Views\AspNetUsers\Create.cshtml" />
-    <Content Include="Views\AspNetUsers\Delete.cshtml" />
     <Content Include="Views\AspNetUsers\Details.cshtml" />
     <Content Include="Views\AspNetUsers\Edit.cshtml" />
-    <Content Include="Views\AspNetUsers\Index.cshtml" />
+    <Content Include="Views\AspNetUsers\Delete.cshtml" />
+    <Content Include="Views\Shared\_BackStagePartialMain.cshtml" />
+    <Content Include="Views\Stocks\Index.cshtml" />
+    <Content Include="Views\Stocks\Details.cshtml" />
+    <Content Include="Views\Stocks\Create.cshtml" />
+    <Content Include="Views\Stocks\Edit.cshtml" />
+    <Content Include="Views\Stocks\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Assets\scripts\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
