create bookmark model

--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Models\AspNetUser.cs" />
     <Compile Include="Models\AspNetUserClaim.cs" />
     <Compile Include="Models\AspNetUserLogin.cs" />
+    <Compile Include="Models\BookMark.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\CollectionItem.cs" />
     <Compile Include="Models\Color.cs" />
