--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -247,6 +247,58 @@
     <Content Include="Assets\images\loading.gif" />
     <Content Include="Assets\images\next.png" />
     <Content Include="Assets\images\prev.png" />
+    <Content Include="Assets\images\Product\BOOTS\Chunky heel ankle boots\black\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Chunky heel ankle boots\black\2.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Chunky heel ankle boots\brown\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Chunky heel ankle boots\index1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Chunky heel ankle boots\index2.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Chunky heel ankle boots\snake\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Chunky heel ankle boots\snake\2.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Chunky heel ankle boots\white\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Python pattern stretch boots\black\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Python pattern stretch boots\index1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Side cut ankle boots\black\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Side cut ankle boots\black\2.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Side cut ankle boots\brown\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Side cut ankle boots\index1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Side cut ankle boots\index2.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Side cut ankle boots\snake\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Side cut ankle boots\white\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Square toe short boots\black\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Square toe short boots\brown\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Square toe short boots\brown\2.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Square toe short boots\index1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Square toe short boots\index2.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Studded short boots\black\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Studded short boots\black\2.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Studded short boots\brown\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Studded short boots\index1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Studded short boots\index2.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Suede stretch boots\black\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Suede stretch boots\black\2.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Suede stretch boots\brown\1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Suede stretch boots\index1.jpg" />
+    <Content Include="Assets\images\Product\BOOTS\Suede stretch boots\index2.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\2way ribbon mules\black\1.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\2way ribbon mules\black\2.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\2way ribbon mules\brown\1.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\2way ribbon mules\brown\2.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\2way ribbon mules\index1.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\2way ribbon mules\index2.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Pointed Rabbit Farm Mule\black\1.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Pointed Rabbit Farm Mule\black\2.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Pointed Rabbit Farm Mule\brown\1.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Pointed Rabbit Farm Mule\brown\2.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Pointed Rabbit Farm Mule\index1.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Pointed Rabbit Farm Mule\index2.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Square Tour Rabbit Fur Slipper Mule\black\1.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Square Tour Rabbit Fur Slipper Mule\black\2.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Square Tour Rabbit Fur Slipper Mule\brown\1.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Square Tour Rabbit Fur Slipper Mule\brown\2.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Square Tour Rabbit Fur Slipper Mule\index1.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Square Tour Rabbit Fur Slipper Mule\index2.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Square Tour Rabbit Fur Slipper Mule\white\1.jpg" />
+    <Content Include="Assets\images\Product\SANDAL\Square Tour Rabbit Fur Slipper Mule\white\2.jpg" />
     <Content Include="Assets\js\CollectionJS.js" />
     <Content Include="Assets\js\lightbox-plus-jquery.js" />
     <Content Include="Assets\js\lightbox-plus-jquery.min.js" />
