--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -588,6 +588,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Assets\scripts\" />
+    <Folder Include="Views\BookMarks\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
