--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -191,7 +191,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CollectionController.cs" />
-    <Compile Include="Controllers\StocksController.cs" />
+    <Compile Include="Controllers\BackStockController.cs" />
     <Compile Include="Models\AspNetRole.cs" />
     <Compile Include="Models\AspNetUser.cs" />
     <Compile Include="Models\AspNetUserClaim.cs" />
@@ -231,8 +231,6 @@
     <Content Include="Assets\css\lightbox.css" />
     <Content Include="Assets\css\lightbox.min.css" />
     <Content Include="Assets\css\MainPage.css" />
-    <Content Include="Assets\css\sb-admin-2.css" />
-    <Content Include="Assets\css\sb-admin-2.min.css" />
     <Content Include="Assets\images\close.png" />
     <Content Include="Assets\images\collection\1.jpg" />
     <Content Include="Assets\images\collection\10.jpg" />
@@ -499,11 +497,15 @@
     <Content Include="Assets\js\lightbox.js" />
     <Content Include="Assets\js\lightbox.min.js" />
     <Content Include="Assets\css\main.css" />
+    <Content Include="Assets\js\main.js" />
+    <Content Include="Assets\js\utils.js" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrapForFour.css" />
+    <Content Include="Content\Chart.css" />
+    <Content Include="Content\Chart.min.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -511,6 +513,8 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\Chart.js" />
+    <Content Include="Scripts\Chart.min.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
@@ -591,24 +595,23 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Home\BackStageIndex.cshtml" />
     <Content Include="Views\Shared\_BackStagePartialTop.cshtml" />
-    <Content Include="Views\AspNetUsers\Index.cshtml" />
     <Content Include="Views\AspNetUsers\Create.cshtml" />
     <Content Include="Views\AspNetUsers\Details.cshtml" />
     <Content Include="Views\AspNetUsers\Edit.cshtml" />
-    <Content Include="Views\AspNetUsers\Index.cshtml" />
     <Content Include="Views\Collection\CollectionPhotos.cshtml" />
     <Content Include="Views\Shared\_CollectionPartial.cshtml" />
     <Content Include="Views\AspNetUsers\Delete.cshtml" />
     <Content Include="Views\Shared\_BackStagePartialMain.cshtml" />
-    <Content Include="Views\Stocks\Index.cshtml" />
-    <Content Include="Views\Stocks\Details.cshtml" />
-    <Content Include="Views\Stocks\Create.cshtml" />
-    <Content Include="Views\Stocks\Edit.cshtml" />
-    <Content Include="Views\Stocks\Delete.cshtml" />
+    <Content Include="Views\BackStock\Index.cshtml" />
+    <Content Include="Views\BackStock\Details.cshtml" />
+    <Content Include="Views\BackStock\Create.cshtml" />
+    <Content Include="Views\BackStock\Edit.cshtml" />
+    <Content Include="Views\BackStock\Delete.cshtml" />
     <Content Include="Views\Shared\_Footer.cshtml" />
     <Content Include="Views\Shared\_Header.cshtml" />
     <Content Include="Views\Shared\_Social_Icons.cshtml" />
     <Content Include="Views\Shared\IndexPartial.cshtml" />
+    <Content Include="Views\AspNetUsers\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
