--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -292,6 +292,7 @@
   <ItemGroup>
     <Content Include="Assets\css\CollectionStyle.css" />
     <Content Include="Assets\css\FixedMenu.css" />
+    <Content Include="Assets\css\flexslider.css" />
     <Content Include="Assets\css\lightbox.css" />
     <Content Include="Assets\css\lightbox.min.css" />
     <Content Include="Assets\css\HomePage.css" />
@@ -578,9 +579,10 @@
     <Content Include="Assets\images\Product\SANDAL\Square Tour Rabbit Fur Slipper Mule\white\2.jpg" />
     <Content Include="Assets\js\CollectionJS.js" />
     <Content Include="Assets\js\FixedMenuForIG.js" />
-    <Content Include="Assets\js\HomePageCarousel.js" />
     <Content Include="Assets\js\HomePageForCollection.js" />
     <Content Include="Assets\js\HomePageForItemsAndJournal.js" />
+    <Content Include="Assets\js\jquery.flexslider-min.js" />
+    <Content Include="Assets\js\jquery.flexslider.js" />
     <Content Include="Assets\js\lightbox-plus-jquery.js" />
     <Content Include="Assets\js\lightbox-plus-jquery.min.js" />
     <Content Include="Assets\js\lightbox.js" />
