--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Controllers\OnlineStoreController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
+    <Compile Include="Controllers\ShopController.cs" />
     <Compile Include="Helper\asterisk.cs" />
     <Compile Include="Migrations\201911300636204_AddFieldDateOfBirth.cs" />
     <Compile Include="Migrations\201911300636204_AddFieldDateOfBirth.Designer.cs">
@@ -268,6 +269,7 @@
     <Compile Include="Models\MetaData\AspNetUserMD.cs" />
     <Compile Include="Models\MetaData\MemberCenter.cs" />
     <Compile Include="Models\MetaData\OrderMD.cs" />
+    <Compile Include="ViewModel\OnlineStore.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\Product.cs" />
@@ -297,6 +299,7 @@
     <Content Include="Assets\css\HomePage.css" />
     <Content Include="Assets\css\MemberCenter.css" />
     <Content Include="Assets\css\OnlineStore.css" />
+    <Content Include="Assets\css\Shop.css" />
     <Content Include="Assets\images\close.png" />
     <Content Include="Assets\images\collection\1.jpg" />
     <Content Include="Assets\images\collection\10.jpg" />
@@ -728,6 +731,9 @@
     <Content Include="Views\Order\_ViewStart.cshtml" />
     <Content Include="Views\Order\Details.cshtml" />
     <Content Include="Views\Shared\_OrderDetailPartial.cshtml" />
+    <Content Include="Views\Shared\_OnlineStorePartial.cshtml" />
+    <Content Include="Views\Shop\Shop.cshtml" />
+    <Content Include="Views\Shared\_OnlineStore_ProductDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
