簡化OnlineStore頁面，路由設定完成，使用DaniellaGemma/OnlineStore/{category}連接左邊查詢項目，未達成直接按網頁連接。

--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -742,6 +742,7 @@
     <Content Include="Views\OnlineStore\OnlineStore_Category_SNEAKER.cshtml" />
     <Content Include="Views\OnlineStore\OnlineStore_Category_SANDAL.cshtml" />
     <Content Include="Views\OnlineStore\OnlineStore_Category_BOOTS.cshtml" />
+    <Content Include="Views\OnlineStore\FindBrand.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
