OnlineStore sidebar Search and OrderBy Price.

--- a/Gemma/Views/Web.config
+++ b/Gemma/Views/Web.config
@@ -20,6 +20,7 @@
         <add namespace="Gemma" />
         <add namespace="PagedList" />
         <add namespace="PagedList.Mvc" />
+        <add namespace="Gemma.ViewModel" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
