Journal點進去全部完成(差連結去onlinestore)+BookMark前台+邏輯(差傳入)

--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -736,6 +736,13 @@
     <Content Include="Views\Order\Details.cshtml" />
     <Content Include="Views\Shared\_OrderDetailPartial.cshtml" />
     <Content Include="Views\Order\Revenu.cshtml" />
+    <Content Include="Views\Journall\JournalList8.cshtml" />
+    <Content Include="Views\Journall\JournalList2.cshtml" />
+    <Content Include="Views\Journall\JournalList3.cshtml" />
+    <Content Include="Views\Journall\JournalList5.cshtml" />
+    <Content Include="Views\Journall\JournalList6.cshtml" />
+    <Content Include="Views\Journall\JournalList7.cshtml" />
+    <Content Include="Views\Journall\JournalList4.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
