--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -311,6 +311,7 @@
     <Content Include="Assets\css\lightbox.css" />
     <Content Include="Assets\css\lightbox.min.css" />
     <Content Include="Assets\css\HomePage.css" />
+    <Content Include="Assets\css\LoadingPage.css" />
     <Content Include="Assets\css\MemberCenter.css" />
     <Content Include="Assets\css\OnlineStore.css" />
     <Content Include="Assets\css\Shop.css" />
@@ -615,6 +616,7 @@
     <Content Include="Assets\js\lightbox.js" />
     <Content Include="Assets\js\lightbox.min.js" />
     <Content Include="Assets\css\main.css" />
+    <Content Include="Assets\js\LoadingPage.js" />
     <Content Include="Assets\js\main.js" />
     <Content Include="Assets\js\utils.js" />
     <Content Include="Content\bootstrap-theme.css" />
