--- a/Gemma/Gemma.csproj
+++ b/Gemma/Gemma.csproj
@@ -65,6 +65,7 @@
     <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
       <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="SendGrid, Version=9.12.0.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
       <HintPath>..\packages\Sendgrid.9.12.0\lib\net452\SendGrid.dll</HintPath>
     </Reference>
@@ -303,6 +304,7 @@
     <Compile Include="ViewModel\StockViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\css\BookMark.css" />
     <Content Include="Assets\css\CollectionStyle.css" />
     <Content Include="Assets\css\FixedMenu.css" />
     <Content Include="Assets\css\flexslider.css" />
@@ -772,6 +774,7 @@
     <Content Include="Views\Shared\_ProductDetailsPartial.cshtml" />
     <Content Include="Views\Details\_Layout.cshtml" />
     <Content Include="Views\Details\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_BookMarkPicturePartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
